# lwiot-samd51

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: freertos-type-check.cmake  samd51.cmake
include/: FreeRTOSConfig.h  peripheral_clk_config.h  usbd_config.h
include/lwiot/samd51/: adcchip.h  dacchip.h  gpio.h  gpiochip.h  hardwarei2calgorithm.h  pwm.h  sercom.h
include/lwiot/samd51/usb/: hal_usb_device.h  hpl_usb_device.h  usb_dev.h
samd51/: CMakeLists.txt  new.cpp
samd51/gpio/: adcchip.cpp  analog.c  dacchip.cpp  gpio.cpp  gpiochip.cpp  irq_handlers.c
samd51/hal/src/: hal_gpio.c  hal_time.c
samd51/hal/utils/src/: utils_read_write.c  utils_syscalls.c
samd51/pwm/: pwmchannel.cpp  pwmtimer.cpp
samd51/samd51a/: init.c
samd51/samd51a/gcc/: system_samd51.c
samd51/sercom/: hardwarei2calgorithm.cpp  sercom.cpp
samd51/usb/: cdcdf_acm.c  hal_usb_device.c  hpl_usb.c  usb_dev.c  usb_protocol.c  usbdc.c
standalone/: samd51.c
tests/startup/: Makefile  app.cpp  app.h  driver_init.c  driver_init.c.bak  main.c  usb_start.c  usb_start.h
